src/objects/DOZISF__ZoomInfo__c.object
<CustomObject>
    <description>The ZoomInfo object stores all Contact and Company data for the associated Lead, Contact, or Account.</description>
    <label>ZoomInfo</label>
    <nameField>
        <label>ZoomInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomInfo Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>DOZISF__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Lookup Field.</description>
        <inlineHelpText>Account Lookup Field.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ZoomInfo Records</relationshipLabel>
        <relationshipName>ZoomInfo_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Alexa_Rank__c</fullName>
        <description>Alexa rank as a measure of website popularity.</description>
        <inlineHelpText>Alexa rank as a measure of website popularity.</inlineHelpText>
        <label>Alexa Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOZISF__All_Industries__c</fullName>
        <description>Comma-separated list of all industries that ZoomInfo has on the company.</description>
        <inlineHelpText>Comma-separated list of all industries that ZoomInfo has on the company.</inlineHelpText>
        <label>All Industries</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__All_Investors__c</fullName>
        <description>List of organizations that invested in the company.</description>
        <inlineHelpText>List of organizations that invested in the company.</inlineHelpText>
        <label>All Investors</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__All_Sub_Industries__c</fullName>
        <description>Comma-separated list of all Secondary Level industries that ZoomInfo has on the company.</description>
        <inlineHelpText>Comma-separated list of all Secondary Level industries that ZoomInfo has on the company.</inlineHelpText>
        <label>All Sub-Industries</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Calculated_Job_Function__c</fullName>
        <description>Inferred job function based on the title input parameter.</description>
        <inlineHelpText>Inferred job function based on the title input parameter.</inlineHelpText>
        <label>Calculated Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Calculated_Management_Level__c</fullName>
        <description>Inferred management level based on title input parameter.</description>
        <inlineHelpText>Inferred management level based on title input parameter.</inlineHelpText>
        <label>Calculated Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Certification_Date__c</fullName>
        <description>Last time we either saw email activity or manually confirmed company is in business.</description>
        <inlineHelpText>Last time we either saw email activity or manually confirmed company is in business.</inlineHelpText>
        <label>Certification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__Certified_Active_Company__c</fullName>
        <description>Yes or no value which denotes if ZoomInfo&apos;s research and data team has confirmed activity within the past 12 months.</description>
        <inlineHelpText>Yes or no value which denotes if ZoomInfo&apos;s research and data team has confirmed activity within the past 12 months.</inlineHelpText>
        <label>Certified Active Company</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_City__c</fullName>
        <description>City of the company&apos;s primary address.</description>
        <inlineHelpText>City of the company&apos;s primary address.</inlineHelpText>
        <label>Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Country__c</fullName>
        <description>Country of the company&apos;s primary address.</description>
        <inlineHelpText>Country of the company&apos;s primary address.</inlineHelpText>
        <label>Company Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Description__c</fullName>
        <description>Description associated with the company.</description>
        <inlineHelpText>Description associated with the company.</inlineHelpText>
        <label>Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Fax__c</fullName>
        <description>Primary fax number for the company.</description>
        <inlineHelpText>Primary fax number for the company.</inlineHelpText>
        <label>Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_LinkedIn_URL__c</fullName>
        <description>URL of the company profile within LinkedIn.</description>
        <inlineHelpText>URL of the company profile within LinkedIn.</inlineHelpText>
        <label>Company LinkedIn URL</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Name__c</fullName>
        <description>Name of the company.</description>
        <inlineHelpText>Name of the company.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Phone__c</fullName>
        <description>Primary phone number of the company.</description>
        <inlineHelpText>Primary phone number of the company.</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_State__c</fullName>
        <description>State of the company&apos;s primary address.</description>
        <inlineHelpText>State of the company&apos;s primary address.</inlineHelpText>
        <label>Company State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Street__c</fullName>
        <description>Street of the company&apos;s primary address.</description>
        <inlineHelpText>State of the company&apos;s primary address.</inlineHelpText>
        <label>Company Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Type__c</fullName>
        <description>Whether company is private or public.</description>
        <inlineHelpText>Whether company is private or public.</inlineHelpText>
        <label>Company Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_Zip_Code__c</fullName>
        <description>Zip code of the company&apos;s primary address.</description>
        <inlineHelpText>Zip code of the company&apos;s primary address.</inlineHelpText>
        <label>Company Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_ZoomInfo_URL__c</fullName>
        <description>URL to the company profile in ZoomInfo.</description>
        <inlineHelpText>URL to the company profile in ZoomInfo.</inlineHelpText>
        <label>Company ZoomInfo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOZISF__Company_isDefunct__c</fullName>
        <description>Indicates whether the company still exists.</description>
        <inlineHelpText>Indicates whether the company still exists.</inlineHelpText>
        <label>Company isDefunct</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Accuracy_Grade__c</fullName>
        <description>Grade indicating the likelihood that a contact is reachable and still employed by the company listed.</description>
        <inlineHelpText>Grade indicating the likelihood that a contact is reachable and still employed by the company listed.</inlineHelpText>
        <label>Contact Accuracy Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Accuracy_Score__c</fullName>
        <description>Score indicating the likelihood that a contact is reachable and still employed by the company listed.</description>
        <inlineHelpText>Score indicating the likelihood that a contact is reachable and still employed by the company listed.</inlineHelpText>
        <label>Contact Accuracy Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_City__c</fullName>
        <description>A person&apos;s city based on their personal location.</description>
        <inlineHelpText>A person&apos;s city based on their personal location.</inlineHelpText>
        <label>Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Country__c</fullName>
        <description>A person&apos;s country based on their personal location.</description>
        <inlineHelpText>A person&apos;s country based on their personal location.</inlineHelpText>
        <label>Contact Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_State__c</fullName>
        <description>A person&apos;s state based on their personal location.</description>
        <inlineHelpText>A person&apos;s state based on their personal location.</inlineHelpText>
        <label>Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Street__c</fullName>
        <description>A person&apos;s street address based on their personal location.</description>
        <inlineHelpText>A person&apos;s street address based on their personal location.</inlineHelpText>
        <label>Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact_Zip_Code__c</fullName>
        <description>A person&apos;s zip code based on their personal location.</description>
        <inlineHelpText>A person&apos;s zip code based on their personal location.</inlineHelpText>
        <label>Contact Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Lookup Field.</description>
        <inlineHelpText>Contact Lookup Field.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ZoomInfo Records</relationshipLabel>
        <relationshipName>ZoomInfo_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Department__c</fullName>
        <description>Department employee is associated with.</description>
        <inlineHelpText>Department employee is associated with.</inlineHelpText>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Direct_Phone__c</fullName>
        <description>Person direct business phone number.</description>
        <inlineHelpText>Person direct business phone number.</inlineHelpText>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOZISF__Education__c</fullName>
        <description>A person&apos;s history of education.</description>
        <inlineHelpText>A person&apos;s history of education.</inlineHelpText>
        <label>Education</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Email_Address__c</fullName>
        <description>Person business email address.</description>
        <inlineHelpText>Person business email address.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DOZISF__Email_Matches_Company_Name__c</fullName>
        <description>Indicates if ZoomInfo recognizes a match between the email domain input value and known domains for the company.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes a match between the email domain input value and known domains for the company.</inlineHelpText>
        <label>Email Matches Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Email_Matches_Person_Name__c</fullName>
        <description>Indicates if the email address contains the person&apos;s full name.</description>
        <inlineHelpText>Indicates if the email address contains the person&apos;s full name.</inlineHelpText>
        <label>Email Matches Person Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Employee_Count__c</fullName>
        <description>Approximate number of contacts employed by the company.</description>
        <inlineHelpText>Approximate number of contacts employed by the company.</inlineHelpText>
        <label>Employee Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Employee_Range__c</fullName>
        <description>Approximate range for the number of contacts employed by the company.</description>
        <inlineHelpText>Approximate range for the number of contacts employed by the company.</inlineHelpText>
        <label>Employee Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Employment_History__c</fullName>
        <description>A person&apos;s history of employment.</description>
        <inlineHelpText>A person&apos;s history of employment.</inlineHelpText>
        <label>Employment History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Facebook_Followers__c</fullName>
        <description>Number of Facebook followers.</description>
        <inlineHelpText>Number of Facebook followers.</inlineHelpText>
        <label>Facebook Followers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Fax__c</fullName>
        <description>Person direct business fax number.</description>
        <inlineHelpText>Person direct business fax number.</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOZISF__Finance_Department_Budget__c</fullName>
        <description>Approximate budget of the company&apos;s finance department.</description>
        <inlineHelpText>Approximate budget of the company&apos;s finance department.</inlineHelpText>
        <label>Finance Department Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOZISF__First_Name__c</fullName>
        <description>First name of person.</description>
        <inlineHelpText>First name of person.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Founded_Year__c</fullName>
        <description>The year the company was founded.</description>
        <inlineHelpText>The year the company was founded.</inlineHelpText>
        <label>Founded Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Free_Email__c</fullName>
        <description>Indicates if ZoomInfo recognizes an email address input value as managed by a free or temporary email service provider.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes an email address input value as managed by a free or temporary email service provider.</inlineHelpText>
        <label>Free Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Full_Address__c</fullName>
        <description>Full address of the company.</description>
        <inlineHelpText>Full address of the company.</inlineHelpText>
        <label>Full Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Full_Name__c</fullName>
        <description>Combined full name of person.</description>
        <inlineHelpText>Combined full name of person.</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Funding_Rounds__c</fullName>
        <description>List of funding rounds including date, type and amount.</description>
        <inlineHelpText>List of funding rounds including date, type and amount.</inlineHelpText>
        <label>Funding Rounds</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Generic_Email__c</fullName>
        <description>Indicates if ZoomInfo recognizes email input value as a role based username.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes email input value as a role based username.</inlineHelpText>
        <label>Generic Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__HR_Department_Budget__c</fullName>
        <description>Approximate budget of the company&apos;s HR department.</description>
        <inlineHelpText>Approximate budget of the company&apos;s HR department.</inlineHelpText>
        <label>HR Department Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOZISF__IT_Department_Budget__c</fullName>
        <description>Approximate budget of the company&apos;s IT department.</description>
        <inlineHelpText>Approximate budget of the company&apos;s IT department.</inlineHelpText>
        <label>IT Department Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOZISF__Industry__c</fullName>
        <description>Specific industry information.</description>
        <inlineHelpText>Specific industry information.</inlineHelpText>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Job_Function__c</fullName>
        <description>A person&apos;s organizational job function.</description>
        <inlineHelpText>A person&apos;s organizational job function.</inlineHelpText>
        <label>Job Function</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Job_Title__c</fullName>
        <description>Persons current job title.</description>
        <inlineHelpText>Persons current job title.</inlineHelpText>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Known_First_Name__c</fullName>
        <description>Indicates if ZoomInfo recognizes a first name input value as a known first name using multiple sources including the uS Census.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes a first name input value as a known first name using multiple sources including the uS Census.</inlineHelpText>
        <label>Known First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Known_Full_Name__c</fullName>
        <description>Indicates if ZoomInfo recognizes a first name input value as a known full name using multiple sources including the uS Census.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes a first name input value as a known full name using multiple sources including the uS Census.</inlineHelpText>
        <label>Known Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Known_Last_Name__c</fullName>
        <description>Indicates if ZoomInfo recognizes a first name input value as a known last name using multiple sources including the uS Census.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes a first name input value as a known last name using multiple sources including the uS Census.</inlineHelpText>
        <label>Known Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Last_Funding_Round_Amount__c</fullName>
        <description>Amount of Last funding round.</description>
        <inlineHelpText>Amount of Last funding round.</inlineHelpText>
        <label>Last Funding Round Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOZISF__Last_Funding_Round_Date__c</fullName>
        <description>Date of last funding round.</description>
        <inlineHelpText>Date of last funding round.</inlineHelpText>
        <label>Last Funding Round Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Last_Mentioned__c</fullName>
        <description>Last time we found a press release/article mentioning that contact.</description>
        <inlineHelpText>Last time we found a press release/article mentioning that contact.</inlineHelpText>
        <label>Last Mentioned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Last_Name__c</fullName>
        <description>Last name of person.</description>
        <inlineHelpText>Last name of person.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Last_Updated_Date__c</fullName>
        <description>ZoomInfo last verified date of employment details.</description>
        <inlineHelpText>ZoomInfo last verified date of employment details.</inlineHelpText>
        <label>Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead Lookup Field.</description>
        <inlineHelpText>Lead Lookup Field.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ZoomInfo Records</relationshipLabel>
        <relationshipName>ZoomInfo_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Malformed_Email__c</fullName>
        <description>Indicates if ZoomInfo recognizes and email address input value is malformed and does not follow the xyz@domainCom syntax.</description>
        <inlineHelpText>Indicates if ZoomInfo recognizes and email address input value is malformed and does not follow the xyz@domainCom syntax.</inlineHelpText>
        <label>Malformed Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Management_Level__c</fullName>
        <description>A person&apos;s management level.</description>
        <inlineHelpText>A person&apos;s management level.</inlineHelpText>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Marketing_Department_Budget__c</fullName>
        <description>Approximate budget of the company&apos;s marketing department.</description>
        <inlineHelpText>Approximate budget of the company&apos;s marketing department.</inlineHelpText>
        <label>Marketing Department Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOZISF__Mobile_Phone_Number__c</fullName>
        <description>Person&apos;s mobile phone number.</description>
        <inlineHelpText>Person&apos;s mobile phone number.</inlineHelpText>
        <label>Mobile Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOZISF__NAICS_Code__c</fullName>
        <description>Four-digit numerical codes assigned by the US government to business establishments to identify the primary business of the establishment.</description>
        <inlineHelpText>Four-digit numerical codes assigned by the US government to business establishments to identify the primary business of the establishment.</inlineHelpText>
        <label>NAICS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__No_Match_Reason__c</fullName>
        <description>Reason why ZoomInfo was not able to match- only pushed when there is 1) Opt-Out , 2) Master Data suppression List or 3) Restricted Dataset access.</description>
        <inlineHelpText>Reason why ZoomInfo was not able to match- only pushed when there is 1) Opt-Out , 2) Master Data suppression List or 3) Restricted Dataset access.</inlineHelpText>
        <label>No-Match Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Normalized_First_Name__c</fullName>
        <description>ZoomInfo normalized first name based on input value.</description>
        <inlineHelpText>ZoomInfo normalized first name based on input value.</inlineHelpText>
        <label>Normalized First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Normalized_Last_Name__c</fullName>
        <description>ZoomInfo normalized last name based on input value.</description>
        <inlineHelpText>ZoomInfo normalized last name based on input value.</inlineHelpText>
        <label>Normalized Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Notice_Provided_Date__c</fullName>
        <description>The date ZoomInfo notified the person that they are in our database.</description>
        <inlineHelpText>The date ZoomInfo notified the person that they are in our database.</inlineHelpText>
        <label>Notice Provided Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Number_of_Locations__c</fullName>
        <description>Number of office locations associated with a company.</description>
        <inlineHelpText>Number of office locations associated with a company.</inlineHelpText>
        <label>Number of Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Owner_Email__c</fullName>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DOZISF__Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Parent_Company_Name__c</fullName>
        <description>Name of parent company of requested company.</description>
        <inlineHelpText>Name of parent company of requested company.</inlineHelpText>
        <label>Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Parent_Company_ZoomInfo_ID__c</fullName>
        <description>Unique identifier of parent company of requested company.</description>
        <inlineHelpText>Unique identifier of parent company of requested company.</inlineHelpText>
        <label>Parent Company ZoomInfo ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Past_1_Year_Employee_Growth_Rate__c</fullName>
        <description>Approximate company employee growth percentage in the past 1 year.</description>
        <inlineHelpText>Approximate company employee growth percentage in the past 1 year.</inlineHelpText>
        <label>Past 1 Year Employee Growth Rate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Past_2_Year_Employee_Growth_Rate__c</fullName>
        <description>Approximate company employee growth percentage in the past 2 year.</description>
        <inlineHelpText>Approximate company employee growth percentage in the past 2 year.</inlineHelpText>
        <label>Past 2 Year Employee Growth Rate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Person_Has_Moved__c</fullName>
        <description>Indicates ZoomInfo recognizes the person company input value does not match ZoomInfo current company but does match known employment history.</description>
        <inlineHelpText>Indicates ZoomInfo recognizes the person company input value does not match ZoomInfo current company but does match known employment history.</inlineHelpText>
        <label>Person Has Moved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Person_Image_URL__c</fullName>
        <description>Link to image avatar of person.</description>
        <inlineHelpText>Link to image avatar of person.</inlineHelpText>
        <label>Person Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOZISF__Person_LinkedIn_URL__c</fullName>
        <description>Url of the person profile within linkedin.</description>
        <inlineHelpText>Url of the person profile within linkedin.</inlineHelpText>
        <label>Person LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DOZISF__Person_Looks_like_EU__c</fullName>
        <description>Inferred person European Union geographic region designation.</description>
        <inlineHelpText>Inferred person European Union geographic region designation.</inlineHelpText>
        <label>Person Looks like EU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Primary_Industry__c</fullName>
        <description>Top level industry.</description>
        <inlineHelpText>Top level industry.</inlineHelpText>
        <label>Primary Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Primary_Sub_Industry__c</fullName>
        <description>Second level industry.</description>
        <inlineHelpText>Second level industry.</inlineHelpText>
        <label>Primary Sub-Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Products_and_Services__c</fullName>
        <description>This is a lookup to a third party database we work with to find what other products or services that company many have, not listed in ZoomInfo.</description>
        <inlineHelpText>This is a lookup to a third party database we work with to find what other products or services that company many have, not listed in ZoomInfo.</inlineHelpText>
        <label>Products and Services</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Ranking__c</fullName>
        <description>Company ranking list (e.g., Fortune 500 and so on).</description>
        <inlineHelpText>Company ranking list (e.g., Fortune 500 and so on).</inlineHelpText>
        <label>Ranking</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__Revenue_Range__c</fullName>
        <description>Estimated range of annual revenue.</description>
        <inlineHelpText>Estimated range of annual revenue.</inlineHelpText>
        <label>Revenue Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Revenue__c</fullName>
        <description>Estimated annual revenue.</description>
        <inlineHelpText>Estimated annual revenue.</inlineHelpText>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOZISF__SIC_Code__c</fullName>
        <description>Four-digit numerical codes assigned by the US government to business establishments to identify the primary business of the establishment.</description>
        <inlineHelpText>Four-digit numerical codes assigned by the US government to business establishments to identify the primary business of the establishment.</inlineHelpText>
        <label>SIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Supplemental_Email_Address__c</fullName>
        <description>Person&apos;s personal email address.</description>
        <inlineHelpText>Person&apos;s personal email address.</inlineHelpText>
        <label>Supplemental Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DOZISF__Ticker__c</fullName>
        <description>Stock ticker for the company.</description>
        <inlineHelpText>Stock ticker for the company.</inlineHelpText>
        <label>Ticker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Total_Funding__c</fullName>
        <description>Sum of all rounds of funding, found in the Funding History of the company&apos;s profile.</description>
        <inlineHelpText>Sum of all rounds of funding, found in the Funding History of the company&apos;s profile.</inlineHelpText>
        <label>Total Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOZISF__Twitter_Followers__c</fullName>
        <description>Number of Twitter followers.</description>
        <inlineHelpText>Number of Twitter followers.</inlineHelpText>
        <label>Twitter Followers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>